force-app/main/default/objects/Class__c/fields/Cancelled_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Student_Count__c</fullName>
    <description>Count of students on this class where Status is "Cancelled"</description>
    <inlineHelpText>Count of students on this class where Status is "Cancelled"</inlineHelpText>
    <label>Cancelled Student Count</label>
    <summaryFilterItems>
        <field>Attendance__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>