force-app/main/default/objects/Class__c/fields/Class_Content__c.field-meta.xml
<CustomField>
    <fullName>Class_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Content</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>