force-app/main/default/objects/Class__c/fields/Class_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Date__c</fullName>
    <label>Class Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>