force-app/main/default/objects/Class__c/fields/Class_Status__c.field-meta.xml
<CustomField>
    <fullName>Class_Status__c</fullName>
    <inlineHelpText>When Class Status is set to "Delivered" all registered students will receive an email with details of the project.</inlineHelpText>
    <label>Class Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>