force-app/main/default/objects/Class__c/fields/Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Content_URL__c</fullName>
    <formula>Class_Content__r.Content_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content URL</label>
    <type>Text</type>
</CustomField>