force-app/main/default/objects/Class__c/fields/I_am_the_leader__c.field-meta.xml
<CustomField>
    <fullName>I_am_the_leader__c</fullName>
    <formula>Leader__r.Email    =  $User.Email</formula>
    <inlineHelpText>True if the running user is also the Class Leader</inlineHelpText>
    <label>I am the leader</label>
    <type>Checkbox</type>
</CustomField>