force-app/main/default/objects/Class__c/fields/Leader__c.field-meta.xml
<CustomField>
    <fullName>Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leader</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Staff</value>
        </filterItems>
        <infoMessage>If you are sure that this contact should be a class leader, you can clear the filter constraint and try searching again</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Led Classes</relationshipLabel>
    <relationshipName>Led_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>