force-app/main/default/objects/Class__c/fields/Project_Topic__c.field-meta.xml
<CustomField>
    <fullName>Project_Topic__c</fullName>
    <formula>Class_Content__r.Topic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Topic</label>
    <type>Text</type>
</CustomField>