force-app/main/default/objects/Class__c/fields/Session_Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Session_Leader_Email__c</fullName>
    <inlineHelpText>Automatically populated once a Session Leader is assigned via the Attendances Related List</inlineHelpText>
    <label>Session Leader Email</label>
    <type>Email</type>
</CustomField>