force-app/main/default/objects/Class__c/fields/Session_Leader_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Leader_Name__c</fullName>
    <formula>Leader__r.Full_Name__c</formula>
    <label>Session Leader Name</label>
    <type>Text</type>
</CustomField>