force-app/main/default/objects/Class__c/fields/Session_Leader_Phone__c.field-meta.xml
<CustomField>
    <fullName>Session_Leader_Phone__c</fullName>
    <formula>Leader__r.MobilePhone</formula>
    <label>Session Leader Phone</label>
    <type>Text</type>
</CustomField>