force-app/main/default/objects/Class__c/fields/Session_Leader_SF_Username__c.field-meta.xml
<CustomField>
    <fullName>Session_Leader_SF_Username__c</fullName>
    <formula>Leader__r.Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Leader SF Username</label>
    <type>Text</type>
</CustomField>