force-app/main/default/objects/Class__c/fields/Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>Staff_Count__c</fullName>
    <label>Assistant Count</label>
    <summaryFilterItems>
        <field>Attendance__c.Role__c</field>
        <operation>equals</operation>
        <value>Assistant</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Attendance__c.Attendance_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>