force-app/main/default/objects/Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class_Content__c</columns>
    <columns>Class_Date__c</columns>
    <columns>Project_Topic__c</columns>
    <columns>Session_Leader_Email__c</columns>
    <columns>Staff_Count__c</columns>
    <columns>Student_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>