force-app/main/default/objects/Class__c/listViews/Future_Classes.listView-meta.xml
<ListView>
    <fullName>Future_Classes</fullName>
    <columns>NAME</columns>
    <columns>Class_Date__c</columns>
    <columns>Leader__c</columns>
    <columns>Project_Topic__c</columns>
    <columns>Staff_Count__c</columns>
    <columns>Student_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Future Classes</label>
</ListView>